@@ -490,6 +490,17 @@ test table-29.1 {TableWidgetCmd procedure, "width" option} {
 } {1 {expected integer but got "a"}}
 
 
+test table-30.1 {Table_EditCmd insert with var trace Bug #487747} {
+    destroy .t
+    table .t -cols 7 -rows 0 -variable ::TableData
+    .t insert rows end 1
+    .t set row 1,1 {1 2 3 4 5}
+    .t insert rows -- 0 9000
+    .t insert rows -- 0 9000
+    destroy .t
+} {}
+
+
 return
 ##
 ## STOP TESTS HERE
